--- a/1.Woche/1.-intro.md
+++ b/1.Woche/1.-intro.md
@@ -215,3 +215,267 @@ speziell für **Webtechnologien wie HTML, CSS, JavaScript, Python** usw. optimie
 **Download:**
 👉 [https://code.visualstudio.com/](https://code.visualstudio.com/)
 
+
+## ** Webbrowser für die Anzeige der Website **
+
+### **Allgemeines**
+
+* Zum Anzeigen einer Webseite wird ein **Webbrowser** benötigt.
+* Entwickler sollten ihre Seiten in **mehreren Browsern** und auf **verschiedenen Geräten** testen.
+* Unterschiedliche Browser und Bildschirmgrößen können **abweichende Darstellungen** erzeugen.
+* Diese Anpassungsfähigkeit wird **responsives Webdesign** genannt.
+* Die Umsetzung liegt in der **Verantwortung des Webdesigners**.
+
+### **Wichtige Browser**
+
+* **Google Chrome** (größter Marktanteil)
+* **Mozilla Firefox**
+* **Apple Safari**
+* **Microsoft Edge**
+* Weitere: **Vivaldi**, **Opera**, **Brave**, **Samsung Internet** (mobil stark verbreitet)
+
+### **Rendering-Engines (HTML-Renderer)**
+
+| **Renderer** | **Verwendet von**                                     |
+| ------------ | ----------------------------------------------------- |
+| **Quantum**  | Firefox                                               |
+| **WebKit**   | Safari, alle Browser auf iOS                          |
+| **Blink**    | Chrome, Edge, Opera, Vivaldi, Brave, Samsung Internet |
+
+* Der **HTML-Renderer** (auch Browser-Engine) wandelt Quelltext in sichtbare Webseiten um.
+* Browser mit derselben Engine zeigen Webseiten meist **ähnlich** an.
+
+### **Ende des Internet Explorer 11**
+
+* Der **Support wurde am 15. Juni 2022 beendet**.
+* Keine Updates oder Sicherheitsunterstützung mehr.
+* Entwickler müssen Webseiten **nicht mehr für Internet Explorer 11 anpassen**.
+* Microsoft empfiehlt den Wechsel zu **Microsoft Edge**.
+
+https://pe.app/response_links/03e33dce-c093-432a-b3e2-9530c91eed81 
+
+## **Schritt für Schritt: Eine Webseite erstellen und anzeigen**
+
+## **Schritt für Schritt: Eine Webseite erstellen und anzeigen**
+
+**1. Neues Dokument erstellen:**
+
+* Öffnen Sie einen Text- oder HTML-Editor und legen Sie eine neue Datei an.
+
+**2. HTML-Grundgerüst einfügen:**
+
+```html
+<!doctype html>
+<html lang="de">
+<head>
+<meta charset="UTF-8">
+<title>Fenstertitel</title>
+</head>
+<body>
+<h1>Eine Überschrift</h1>
+<p>Hier steht ein gewöhnlicher Absatztext.</p>
+</body>
+</html>
+```
+
+**3. Datei speichern:**
+
+* Unter `.html` oder `.htm` abspeichern.
+* **Codierung:** UTF-8 (empfohlen).
+* Datei sollte **reiner Text (Plain Text)** sein, ohne Formatierungen.
+
+**4. Im Browser öffnen:**
+
+* Benutze Live Server in Visual Studio Code für eine bessere Entwicklungserfahrung.
+
+## Grundlegender Aufbau von HTML-Dokumenten 
+
+### 1. Strukturierung mit HTML
+
+* HTML dient zur **semantischen Strukturierung** von Inhalten (Überschriften, Absätze, Tabellen, Bilder).
+* Inhalte werden durch **HTML-Elemente** gegliedert
+    - `<h1>`, `<h2>`..., `<h6>`
+    - `<p>`
+    - `<table>`
+
+### 2. HTML-Tags und HTML-Elemente
+
+* **Tag** = Schreibweise in spitzen Klammern, z. B. `<p>`
+* **Element** = kompletter Bereich **mit Öffnendem und Schließendem Tag** und Inhalt, z. B.
+
+  ```html
+  <p>Text</p>
+  ```
+
+* Viele HTML-Elemente bestehen aus:
+
+  * öffnendem Tag
+  * Inhalt
+  * schließendem Tag
+
+* Einige Elemente sind **leer** (ohne Inhalt), z. B. `<br>`.
+
+### 3. Verschachtelung
+
+* HTML-Elemente können **ineinander verschachtelt** werden.
+* Reihenfolge muss **korrekt geschlossen** werden (kein Überkreuzen von Tags).
+
+**Bsp. Verschachtlung**
+  ```html
+  <p>
+    <em>Fetter</em> Text
+  </p>
+  ```
+
+**Fehlerhafte Verschachtlung**
+  ```html
+  <p>
+    <em>Fetter Text
+  </p></em>
+  ```
+
+### 4. HTML-Attribute
+
+* Attribute ergänzen ein Element um **zusätzliche Informationen**.
+* Schreibweise im öffnenden Tag, z. B.:
+
+  ```html
+  <meta charset="UTF-8">
+  <html lang="de">
+  ```
+
+* Attribute bestehen aus **Name + Wert**.
+
+**Bsp. 2**
+```html
+    <p id="Absatz1">Hello<p>
+```
+
+**Bsp. 3**
+```html
+    <a href="google.com">Klick mich<a>
+```
+
+**Bsp. 4**
+```html
+    <img src="./bild1.jpg">
+```
+
+### 5. Grundgerüst eines HTML-Dokuments
+
+
+* Typischer Aufbau:
+
+1. `<!doctype html>` – legt den Dokumenttyp fest (HTML5)
+2. `<html>` – Wurzelelement
+3. `<head>` – Metadaten, Zeichensatz, Titel
+4. `<body>` – sichtbarer Inhalt der Webseite
+
+
+Beispiel:
+
+```html
+<!doctype html>
+<html>
+<head lang="de">
+  <meta charset="UTF-8">
+  <title>Fenstertitel</title>
+</head>
+<body>
+  <h1>Die Hauptüberschrift</h1>
+  <p>Hier steht ein gewöhnlicher Absatztext.</p>
+  <h2>Eine Zwischenüberschrift</h2>
+  <p>Ein weiterer Absatz mit Text.</p>
+</body>
+</html>
+```
+
+### 6. Darstellung im Browser
+
+* Der Browser **rendert** den HTML-Code zu einer sichtbaren Seite.
+* Unterschiede in der Darstellung sind möglich, weil **Browser Standarddarstellungen** (Default Styles) haben.
+
+* Der gesamte Code zwischen **`<html>`** und **`</html>`** bildet das **HTML-Dokument**. (Wurzelelement)
+* In jeder HTML-Datei darf **nur ein** solches Wurzelelement vorhanden sein.
+
+### **Beispielhafte Struktur**
+
+* **`<h1>` … `</h1>`** → Überschrift erster Ordnung
+* **`<p>` … `</p>`** → Absatztext
+* **`<h2>` … `</h2>`** → Überschrift zweiter Ordnung
+* Weitere **Absätze** folgen ebenfalls zwischen `<p>`-Tags.
+
+### **Strukturprinzip**
+
+* HTML-Elemente sind **verschachtelt** wie **rechteckige Behälter (Boxen)**.
+* Diese Boxen bilden die **Grundstruktur** der Seite.
+* Der Bereich von `<html>` bis `</html>` umfasst auch **unsichtbare Elemente**, z. B. aus dem Kopfbereich.
+* Webseiten bestehen aus solchen **rechteckigen Boxen**, die im Browser **untereinander**, **nebeneinander** oder **ineinander** angeordnet werden.
+
+### **Baumstruktur und DOM-Inspektor**
+
+* Ein HTML-Dokument besteht ursprünglich nur aus **Text**.
+* Der **Webbrowser** wandelt diesen Text in eine **Baumstruktur** aus **Objekten** um.
+* Diese Struktur heißt **Document Object Model (DOM)**.
+* Jedes Element im DOM wird als **Knoten (node)** bezeichnet (z. B. HTML-Element, Text).
+* Über Programmiersprachen wie **JavaScript** können DOM-Knoten verändert oder gelöscht werden.
+
+* Mithilfe der **Entwicklertools (DOM-Inspektor)** in modernen Browsern lässt sich diese Baumstruktur untersuchen.
+
+
+* In Google Chrome erreichbar über **„Weitere Tools → Entwicklertools“**.
+  * Sie zeigt die **hierarchische Verschachtelung** der HTML-Elemente deutlich an.
+
+* HTML-Elemente können **ineinander verschachtelt** sein.
+* Daraus entsteht eine **hierarchische Struktur**:
+
+  * Äußere Elemente enthalten innere.
+* Beispiel:
+
+  ```html
+  <!doctype html>
+  <html lang="de">
+    <head>
+      <meta charset="UTF-8">
+      <title>Fenstertitel</title>
+    </head>
+    <body>
+      <p>Hier steht ein <b>gewöhnlicher</b> Absatztext.</p>
+    </body>
+  </html>
+  ```
+
+* Das `<b>`-Element ist **Kind-Element** des `<p>`-Elements.
+* `<p>` ist wiederum **Kind-Element** von `<body>`.
+* Der DOM-Inspektor zeigt diese Beziehungen als **Baumstruktur** an.
+
+### **  Alleinstehende (void) Tags**
+
+* Einige Tags **haben keinen Inhalt** und benötigen **kein End-Tag**.
+
+* Beispiel:
+
+  ```html
+  <p>Ein Zeilenumbruch<br>Die nächste Zeile</p>
+  ```
+
+* Das `<br>`-Tag erzeugt einen **Zeilenumbruch**.
+* Für **Abstände** zwischen Absätzen sollte **CSS (margin)** verwendet werden.
+
+* Groß- und Kleinschreibung von Tags ist gleichwertig (`<H1>` = `<h1>`), empfohlen wird **Kleinschreibung**.
+
+
+### **Kommentare**
+
+* Kommentare beginnen mit `<!--` und enden mit `-->`.
+* Beispiel:
+
+  ```html
+  <!-- Ausagekräftige Überschrift finden -->
+  <h1>Überschrift</h1>
+  <!-- <p>Absatz</p> -->
+  ```
+
+* Kommentare werden **nicht dargestellt**, bleiben aber **im Quelltext sichtbar**.
+
+
