--- a/1.Woche/Exercises/4/0.3-semantik.md
+++ b/1.Woche/Exercises/4/0.3-semantik.md
@@ -132,7 +132,7 @@ Formatiere eine Copyright-Zeile:
 „© 2025 WebDev School“
 
 
-### **Aufgabe 5.3 – `<.>`**
+### **Aufgabe 5.3 – `<span>`**
 
 Unterstreiche mit CSS das Wort „wichtig“ im folgendem Satz:
 
