--- a/2.Woche/1.Flexbox.md
+++ b/2.Woche/1.Flexbox.md
@@ -206,9 +206,28 @@ https://pe.app/response_links/331b8adb-6737-4ab8-bfa0-26c555720e41 (Box Model)
 
   * `flex: 2` entspricht **`flex: 2 1 0%`**.
 
-* **flex-basis** legt eine **Ausgangsgröße** für ein Flex-Item fest
+### flex-basis Eigenschaft
 
-![flx grow](<shapes at 25-11-17 11.48.24.svg>)
+* **flex-basis** legt eine **Ausgangsgröße** für ein Flex-Item fest → die **initiale Breite entlang der Hauptachse**.
+
+* Der Wert kann alles sein, was auch für **width** gültig ist:
+
+  * `px`, `em`, `%`, etc.
+
+* Standardwert von **flex-basis** ist **`auto`**:
+
+  * Der Browser prüft dann, ob eine **width** gesetzt wurde.
+
+    * Wenn ja → diese wird als Ausgangsgröße verwendet.
+    * Wenn nein → Größe wird **aus dem Inhalt** bestimmt (natürliche Größe).
+
+* Wichtig:
+
+  * Wenn **flex-basis ≠ auto**, dann wird eine gesetzte `width` **ignoriert**.
+  * Beispiel: `flex-basis: 200px` überschreibt jede Width-Angabe.
+
+
+![flex grow](<shapes at 25-11-17 11.48.24.svg>)
 
 * Nachdem **flex-basis** die **Ausgangsgröße** eines Flex-Items festgelegt hat, muss der verfügbare Platz im Flex-Container eventuell **neu verteilt** werden.
 
@@ -219,10 +238,24 @@ https://pe.app/response_links/331b8adb-6737-4ab8-bfa0-26c555720e41 (Box Model)
   * **flex-grow** → bestimmt, **wie stark ein Item wächst**, wenn **Platz übrig** ist.
   * **flex-shrink** → bestimmt, **wie stark ein Item schrumpft**, wenn **zu wenig Platz** vorhanden ist.
 
+* Beide Eigenschaften greifen **erst**, nachdem die durch flex-basis definierte **Startgröße** gesetzt wurde.
+
 ### Flex-grow
+
+* Nachdem **flex-basis** für jedes Flex-Item berechnet wurde, ergibt sich eine **Gesamtsumme ihrer Breiten** (inklusive Margins).
+
+* Diese Summe **füllt oft nicht den gesamten Flex-Container**, sodass **Restplatz** übrig bleibt (siehe Abbildung 5.8).
+
+* Dieser **verbleibende Platz** wird nach den **flex-grow**-Werten verteilt:
 
 * **flex-grow** ist eine **nicht-negative ganze Zahl** (0, 1, 2, …).
 * Ein Item mit **flex-grow: 0** → wächst **nicht über seine Basisgröße hinaus**.
   * Ein Item mit **flex-grow: 1 oder höher** → wächst, um freien Platz auszunutzen.
 * Haben mehrere Items ein Wachstum > 0, wird der Restplatz 
 **proportional** verteilt.
+
+* Ergebnis:
+
+  * Alle Items zusammen **füllen den gesamten Container**
+
+![flex growth](<shapes at 25-11-17 12.28.32.svg>)  
